# Snitchaser

./: CMakeLists.txt
oldcode/: gdbloader.c
oldcode/libwrapper/: signal.c
src/: CMakeLists.txt
src/arch/x86/: signal.cpp
src/arch/x86/host/: arch_replayer_helper.c  arch_replayer_helper.h  procmaps.c
src/arch/x86/interp/: CMakeLists.txt  arch_replayer.S  arch_replayer.c  arch_replayer.h  arch_signal.S  arch_signal.c  arch_signal.h  branch_template.S  compiler.S  compiler.c  compute_tls_offset.c  kutils.c  logger.S  scan_opcode.c  sockpair.c  startup.S  tls.c
src/arch/x86/interp/syscalls/: CMakeLists.txt  _llseek.c  _newselect.c  brk.c  clock_getres.c  clock_gettime.c  clone.c  epoll_wait.c  exit.c  exit_group.c  fcntl64.c  fstat64.c  futex.c  getcwd.c  getdents64.c  gettimeofday.c  handlers.h  ioctl.c  ioctl_blk.h  ioctl_tty.h  log_syscalls.c  log_syscalls.h  mmap2.c  mprotect.c  munmap.c  nanosleep.c  pipe.c  poll.c  prctl.c  pread64.c  read.c  (+16 more)
src/arch/x86/xasm/: compiler.h  debug.h  kutils.h  logger_marks.h  marks.h  processor.h  raw_spinlock.h  signal_helper.h  signal_numbers.h  stdint.h  string.h  tls.h  types_helper.h  utils.h
src/common/: debug.h  spinlock.h
src/common/replay/: socketpair.h
src/host/: CMakeLists.txt  debug.c  exception_types.h  main.c  procmaps.h  replay_log.c  replay_log.h  snitchaser_opts.c  snitchaser_opts.h  sockpair.c  syscall_replayer.c  syscall_replayer.h
src/host/gdbserver/: linux-low.c  remote-utils.c  server.c  snitchaser_patch.c  snitchaser_patch.h
src/interp/: CMakeLists.txt  checkpoint.c  checkpoint.h  code_cache.c  code_cache.h  confentries.h  configure.c  configure.h  debug.c  logger.c  logger.h  main.c  replayer.c  replayer.h  syscall_replayer.c  syscall_replayer.h
src/tests/: CMakeLists.txt  test_dl_addr.c  test_flush_logger.c  test_fork.c  test_getpid.c  test_gscall.c  test_localtime_r.c  test_rdtsc.S  test_rt_sigaction.c  test_segfault.c  test_sigaction.c  test_sigbus.c  test_sighandler.c  test_sighandler_2.c  test_sigign.c  test_signals.c  test_sigprocmask.c  test_sigsuspend.c  test_sigthread.c  test_sleep.c  test_syscall_2.c  test_syscall_asm.S  test_threads.c
test-code/: test-httpd.c  test_sigmask.c
test-code/pthread/: test_pthread.c
